does that fix the overlap?

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -173,7 +173,10 @@ a.endorse-button:hover {
   #page {
     display: block;
   }
-
+  .sidebar-content {
+    padding-top: 80px;
+  }
+  
   #sidebar {
     width: auto;
     padding: 2rem 1.5rem;
